--- a/public/views/stdFormAdmin.html
+++ b/public/views/stdFormAdmin.html
@@ -26,6 +26,8 @@
 	</div>
 </div>
 
+<peek-form-directive></peek-form-directive>
+
 <div class="panel panel-default">
 	<div class="panel-heading">
 		<h3 class="panel-title">Preview outside controller</h3>
